<resources>
    <string name="app_name">CinemaPostersAnywhere</string>
    <string name="slideshow">Slideshow</string>
    <string name="movie_title">The 4:30 Movie</string>
    <string name="year">2024</string>
    <string name="movie_overview">In the summer of 1986, three sixteen year old friends spend their Saturdays sneaking into movies at the local multiplex. But when one of the guys also invites the girl of his dreams to see the latest comedy, each of the teens learn more about life and love.</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_year">year</string>
    <string name="now_playing">Now Playing</string>
    <string name="In_theaters">Theaters Now…</string>
    <string name="movie_poster_image_container">movie poster image container</string>
    <string name="top_movies">Top</string>
    <string name="all_movies">All</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="progress_percentage">0/0 (0%)</string>
    <string name="rated">Rated: </string>
    <string name="adult_status">Adult Status</string>
    <string name="todo">TODO</string>
    <string name="tomato_percentage">72%</string>
    <string name="original_language">Original Language</string>
    <string name="genres">Genres</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="padding">12dp</string>
    <string name="studio">Studio: </string>
    <string name="studio_value">[Unknown Studio]</string>
    <string name="tomato_rating">Tomato Rating:</string>
    <string name="min_requirements">Min Requirements</string>
    <string name="max_requirements">Max requirements</string>
    <string name="game_poster_image_container">Game poster</string>
    <string name="game_title">Game Title</string>
    <string name="game_overview">Game overview</string>
    <string name="apex_legends_acheivements">Apex Legends Acheivements</string>
    <string name="apex_legends_system_requirements">Apex Legends System Requirements</string>
    <string name="min_or_max_requirements">Min or Max Requirements</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="videos">Videos</string>
    <string name="settings">Settings</string>
    <string name="video_thumbnail">thumb video</string>
    <string name="youtube_video_name_here">Youtube video name here</string>
    <string name="game_map">Kings Canyon</string>
    <string name="game_map_duration">Time Left: 00:38:37</string>
    <string name="next_map">Olympus</string>
    <string name="steam">Steam</string>
    <string name="_90_min">90 Min</string>
    <string name="map_end_date">2024-10-28 02:00:00</string>
    <string name="map_start_date">2024-10-28 02:00:00</string>
    <string name="next_map_name">Olympus</string>
    <string name="app_overview">CinemaPostersAnywhere, movies and games on your mobile and streaming tv devices. Displays slideshow and related information dynamically, providing you with an engaging way to explore films and related content. To get started, click on the media type button above</string>
    <string name="all_games">All Games</string>
    <string name="top_games">Top Games</string>
    <string name="CinemaPostersAnywhere">CinemaPostersAnywhere</string>
    <string name="cinema">Cinema</string>
    <string name="games">Games</string>
    <string name="enter_ip_address">Enter IP address</string>
    <string name="enter_port">Enter port</string>
    <string name="enter_steam_user_name">Enter Steam Name</string>
    <string name="steam_id_will_appear_here">Steam ID will appear here</string>
</resources>