<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <!-- Side Button Menu -->
    <LinearLayout
        android:id="@+id/side_button_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Buttons for different categories -->
        <Button
            android:id="@+id/button_all"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/all_movies"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_top_rated"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/top_movies"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_popular"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/popular"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_trending"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/trending"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_poster_image_container"
        android:scaleType="center"
        android:src="@drawable/cinema"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/side_button_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <!-- ProgressBar for Loading State -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:visibility="gone"
        android:max="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView to Show Progress -->
    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_percentage"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@color/semi_transparent_black"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_overview"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@color/semi_transparent_black"
        app:layout_constraintBottom_toBottomOf="@id/movie_poster"
        app:layout_constraintStart_toStartOf="@id/movie_poster"
        app:layout_constraintEnd_toEndOf="@id/movie_poster"
        app:layout_constraintTop_toTopOf="@id/movie_poster" />


    <!-- Top Menu with Movie Category and Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="4dp"
        android:padding="12dp"
        android:background="@color/semi_transparent_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/movie_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/In_theaters"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/movie_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- TextView for Ratings -->
            <TextView
                android:id="@+id/movie_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rated"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <!-- TextView for Adult Status -->
            <TextView
                android:id="@+id/adult_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/adult_status"
                android:textColor="@android:color/white" />

            <!-- ImageView for Tomato Icon -->
            <ImageView
                android:id="@+id/tomato_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:src="@drawable/fresh_tomato" />

            <!-- TextView for Tomato Percentage -->
            <TextView
                android:id="@+id/tomato_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomato_percentage"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" />

            <!-- TextView for Original Language -->
            <TextView
                android:id="@+id/original_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/original_language"
                android:textColor="@android:color/white" />

            <!-- TextView for Genres -->
            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/genres"
                android:textColor="@android:color/white" />

            <!-- TextView for Popularity -->
            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/popularity"
                android:textColor="@android:color/white" />

            <!-- TextView for Vote Count -->
            <TextView
                android:id="@+id/vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/vote_count"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
